--- a/package.json
+++ b/package.json
@@ -18,11 +18,20 @@
   "homepage": "https://github.com/JoaoPedroCJ/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "express": "^4.16.4",
     "gm": "^1.23.1",
     "googleapis": "^39.1.0",
     "image-downloader": "^3.4.2",
     "readline-sync": "^1.4.9",
     "sbd": "^1.0.15",
     "watson-developer-cloud": "^3.18.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
